--- a/index.html
+++ b/index.html
@@ -551,7 +551,8 @@
 59;Emerald Wave;;;;;;;45-50;16-18;Волнистая Сердцевидная;Изумрудно-зелёный с белыми волнами;Полутень;Выведен для ландшафтного дизайна;Устойчив к ветру;./img/Emerald Wave.jpg;1
 60;Empress Wu;;;;;;;80-100;30-35;Гигантская сердцевидная;Бордовый с золотой каймой;Полутень;Выращивался исключительно в Запретном городе (Пекин), считался утерянным после 1911;Требовал подвязки из-за веса листьев;./img/Empress Wu.jpg;1
 61;Fairy Wings;;;;;;;15-20;6-8;Сердцевидная;Прозрачно-розовый;Тень;Миниатюрный сорт для сказочных садов;Полупрозрачные листья;./img/Fairy Wings.jpg;1
-62;Fannie Munson;;;;;;;;;;;;;;./img/Fannie Munson.jpg;1
+62;Fannie Munson;Флорида;1940–1950 годы;Старый сорт, без патента;Без патента;Вероятно, выведен в Флориде (США), где находились основные питомники, специализировавшиеся на каладиумах.;Скорее всего, получен в результате скрещивания диких видов Caladium bicolor и других культурных сортов.; 45–60; 45–60;Сердцевидная;Розово-красный с зелеными краями;Полутень;"Почему ""Fannie Munson""?
+Название, вероятно, дано в честь Фэнни Мансон (Fannie Munson) — женщины, связанной с селекцией или спонсировавшей исследования. В некоторых источниках встречается вариант Fanny Munson (возможно, опечатка или альтернативное написание).";Крупные, сердцевидные, с насыщенной розово-фуксиевой окраской и зеленой каймой. Не переносит сквозняков и резких перепадов температур. Предпочитает рассеянный свет или полутень. На ярком солнце листья могут выгорать. ;./img/Fannie Munson.jpg;1
 63;Fast Flash;Heart to Heart;;;;;;;;;;;;;./img/Fast Flash.jpg;1
 64;Fiesta;;;;;;;;;;;;;;./img/Fiesta.jpg;1
 65;Fire Chief;;;;;;;;;;;;;;./img/Fire Chief.jpg;1
@@ -803,7 +804,8 @@
 312;White Wings;;;;;;;50-55;18-20;Сердцевидная;Белый;Тень;Ажурные края листьев;Декоративный;./img/White Wings.jpg;1
 313;White Wonder;Heart to Heart;2010;PP21044;https://patents.justia.com/patent/PP21044;Robert Dale Hartman;Не указаны;50-70;15-25;Ремневидная;Бело-серый с тёмно-зелёными краями;Средняя;Популярный белый сорт;Нежные прожилки;./img/White Wonder.jpg;1
 314;Wildfire;;;;;;;;;;;;;;./img/Wildfire.jpg;1
-315;Xplosion;Heart to Heart;;;;;;;;;;;;;./img/Xplosion.jpg;1`;
+315;Xplosion;Heart to Heart;;;;;;;;;;;;;./img/Xplosion.jpg;1
+`;
 
         const caladiums = parseCSV(csvData);
         let currentSortField = 'ID';
