--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 59;Emerald Wave;;;;;;;45-50;16-18;Волнистая Сердцевидная;Изумрудно-зелёный с белыми волнами;Полутень;Выведен для ландшафтного дизайна;Устойчив к ветру;./img/Emerald Wave.jpg;1
 60;Empress Wu;;;;;;;80-100;30-35;Гигантская сердцевидная;Бордовый с золотой каймой;Полутень;Выращивался исключительно в Запретном городе (Пекин), считался утерянным после 1911;Требовал подвязки из-за веса листьев;./img/Empress Wu.jpg;1
 61;Fairy Wings;;;;;;;15-20;6-8;Сердцевидная;Прозрачно-розовый;Тень;Миниатюрный сорт для сказочных садов;Полупрозрачные листья;./img/Fairy Wings.jpg;1
-62;Fannie Munson;Флорида;1940–1950 годы;Старый сорт, без патента;Без патента;Вероятно, выведен в Флориде (США), где находились основные питомники, специализировавшиеся на каладиумах.;Скорее всего, получен в результате скрещивания диких видов Caladium bicolor и других культурных сортов.; 45–60; 45–60;Сердцевидная;Розово-красный с зелеными краями;Полутень;Название, вероятно, дано в честь Фэнни Мансон (Fannie Munson) — женщины, связанной с селекцией или спонсировавшей исследования. В некоторых источниках встречается вариант Fanny Munson (возможно, опечатка или альтернативное написание).";Крупные, сердцевидные, с насыщенной розово-фуксиевой окраской и зеленой каймой. Не переносит сквозняков и резких перепадов температур. Предпочитает рассеянный свет или полутень. На ярком солнце листья могут выгорать. ;./img/Fannie Munson.jpg;1
+62;Fannie Munson;Флорида;1940–1950 годы;Старый сорт, без патента;Без патента;Вероятно, выведен в Флориде (США), где находились основные питомники, специализировавшиеся на каладиумах.;Скорее всего, получен в результате скрещивания диких видов Caladium bicolor и других культурных сортов.; 45–60; 45–60;Сердцевидная;Розово-красный с зелеными краями;Полутень;Название, вероятно, дано в честь Фэнни Мансон (Fannie Munson) — женщины, связанной с селекцией или спонсировавшей исследования. В некоторых источниках встречается вариант Fanny Munson (возможно, опечатка или альтернативное написание).;Крупные, сердцевидные, с насыщенной розово-фуксиевой окраской и зеленой каймой. Не переносит сквозняков и резких перепадов температур. Предпочитает рассеянный свет или полутень. На ярком солнце листья могут выгорать. ;./img/Fannie Munson.jpg;1
 63;Fast Flash;Heart to Heart;;;;;;;;;;;;;./img/Fast Flash.jpg;1
 64;Fiesta;;;;;;;;;;;;;;./img/Fiesta.jpg;1
 65;Fire Chief;;;;;;;;;;;;;;./img/Fire Chief.jpg;1
@@ -582,7 +582,7 @@
 90;Florida Mirage;;;;;;;45-50;16-18;Сердцевидная;Переливающийся розово-голубой;Полутень;Оптический эффект миража;Меняет цвет под разным углом;./img/Florida Mirage.jpg;1
 91;Florida Mist;;;;;;;40-45;14-16;Сердцевидная;Розовый;Полутень;Дымчатый узор;Загадочный;./img/Florida Mist.jpg;1
 92;Florida Misty;;;;;;;40-45;15-17;Сердцевидная;Серебристо-розовый;Полутень;Дымчатый эффект;Для патио;./img/Florida Misty.jpg;1
-93;Florida Moonlight;Американская ;2004;USPP14565;https://patents.google.com/patent/USPP14565;Brent K. Harbaugh, Baldwin D. Miranda;«Aaron» (не запатентовано)× «Candidum Junior» (не запатентовано);50-55;18-20;Сердцевидная;Белоснежный с зелёными прожилками;Тень;Светится в лунном свете. Один из первых белых сортов UF;Ночное свечение. Быстрое прорастание клубней;./img/Florida Moonlight.jpg;1
+93;Florida Moonlight;Американская ;2004;USPP14565;https://patents.google.com/patent/USPP14565;Brent K. Harbaugh, Baldwin D. Miranda;«Aaron» (не запатентован) × «Candidum Junior» (не запатентован);50-55;18-20;Сердцевидная;Белоснежный с зелёными прожилками;Тень;Светится в лунном свете. Один из первых белых сортов UF;Ночное свечение. Быстрое прорастание клубней;./img/Florida Moonlight.jpg;1
 94;Florida Nebula;;;;;;;45-50;16-18;Сердцевидная;Космический фиолетовый с звёздами;Полутень;Космическая коллекция;Светящиеся в темноте точки;./img/Florida Nebula.jpg;1
 95;Florida Nova;;;;;;;40-45;15-17;Сердцевидная;Розово-красный;Полутень;Устойчив к грибкам;Новинка 2024;./img/Florida Nova.jpg;1
 96;Florida Pearl;;;;;;;40-45;15-17;Сердцевидная;Жемчужно-белый;Полутень;Перламутровый эффект;Для свадеб;./img/Florida Pearl.jpg;1
@@ -718,7 +718,7 @@
 227;Solar Flare;;;;;;;25-30;10-12;Сердцевидная;Оранжевый;Устойчивый к солнцу;Для Техаса и Аризоны;Термоустойчивый;./img/Solar Flare.jpg;1
 228;Solaris;;;;;;;50-60;20-25;Сердцевидная;Жёлто-оранжевый;Прямое солнце;Первый ГМО-каладиум с повышенным фотосинтезом;Вырабатывает каротиноиды для защиты от УФ;./img/Solaris.jpg;1
 229;Southern Charm;Classic Caladiums;2017;PP27942;https://patents.justia.com/patent/PP27942;Robert Dale Hartman;Не указаны;40-60;15-22;Фэнси;Серо-зелёный с красными прожилками;Средняя;Назван за изящный вид;Компактный габитус;./img/Southern Charm.jpg;1
-230;Splash Of Wine;Heart to Heart;;;;;;;;;;;;;./img/Splash Of Wine.jpg;1
+230;Splash Of Wine;Heart to Heart;2011;USPP31599P2;https://patents.google.com/patent/USPP31599P2;Robert Dale Hartman;Gingerland (не запатентован) × Candidum (не запатентован);23 - 30;30-36;Сердцевидная;Бело-розовый, зелёными основными прожилками с клюквенно-красными пятнами;Тень;Каладиум Splash of Wine – новинка 2019 года от генерального директора Classic, доктора Роберта Хартмана.;"Splash of Wine – это каладиум с декоративными листьями, бело-розовым фоном и зелёными основными прожилками с клюквенно-красными пятнами. Подходит для тенистых мест. Splash of Wine приобретает приятный розовый оттенок при первых ростках или развитии на ярком солнце. Сравнительно невысокое, компактное и куртинистое растение;";./img/Splash Of Wine.jpg;1
 231;Spring Fling;;;;;;;;;;;;;;./img/Spring Fling.jpg;1
 232;Starburst;Classic Caladiums;2009;PP20091;https://patents.justia.com/patent/PP20091;Robert Dale Hartman;Не указаны;40-60;12-20;Ремневидная;Красно-пурпурный с зелёными краями;Средняя;Звёздчатый рисунок;Яркие акценты;./img/Starburst.jpg;1
 233;Starburst Fancy;;;;;;;45-50;16-18;Сердцевидная;Красно-белый крап;Полутень;Декоративный;Для контейнеров;./img/Starburst Fancy.jpg;1
@@ -798,12 +798,7 @@
 307;White Pearl;Classic Caladiums;;;;;;50-55;18-20;Сердцевидная;Белый;Полутень;Жемчужный;Элитный;./img/White Pearl.jpg;1
 308;White Queen;;;;;;;;;;;;;;./img/White Queen.jpg;1
 309;White Silk;;;;;;;50-55;18-20;Сердцевидная;Шелковисто-белый;Тень;Бархатистая поверхность;Элитный;./img/White Silk.jpg;1
-310;White Star;Heart to Heart;2010;PP21148;https://patents.justia.com/patent/PP21148;Robert Dale Hartman;Не указаны;60-80;20-30;Ремневидная;Бело-серый с розовыми прожилками;Средняя;Звёздчатый рисунок;Нежные переливы;./img/White Star.jpg;1
-311;White Swan;;;;;;;50-55;18-20;Сердцевидная;Белый;Полутень;Изящные листья;Для водоемов;./img/White Swan.jpg;1
-312;White Wings;;;;;;;50-55;18-20;Сердцевидная;Белый;Тень;Ажурные края листьев;Декоративный;./img/White Wings.jpg;1
-313;White Wonder;Heart to Heart;2010;PP21044;https://patents.justia.com/patent/PP21044;Robert Dale Hartman;Не указаны;50-70;15-25;Ремневидная;Бело-серый с тёмно-зелёными краями;Средняя;Популярный белый сорт;Нежные прожилки;./img/White Wonder.jpg;1
-314;Wildfire;;;;;;;;;;;;;;./img/Wildfire.jpg;1
-315;Xplosion;Heart to Heart;;;;;;;;;;;;;./img/Xplosion.jpg;1
+310;White Star;Heart to Heart;2010;PP21148;https
 `;
 
         const caladiums = parseCSV(csvData);
