--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
 227;Solar Flare;;;;;;;25-30;10-12;Сердцевидная;Оранжевый;Устойчивый к солнцу;Для Техаса и Аризоны;Термоустойчивый;./img/Solar Flare.jpg;1
 228;Solaris;;;;;;;50-60;20-25;Сердцевидная;Жёлто-оранжевый;Прямое солнце;Первый ГМО-каладиум с повышенным фотосинтезом;Вырабатывает каротиноиды для защиты от УФ;./img/Solaris.jpg;1
 229;Southern Charm;Classic Caladiums;2017;PP27942;https://patents.justia.com/patent/PP27942;Robert Dale Hartman;Не указаны;40-60;15-22;Фэнси;Серо-зелёный с красными прожилками;Средняя;Назван за изящный вид;Компактный габитус;./img/Southern Charm.jpg;1
-230;Splash Of Wine;Heart to Heart;2011;USPP31599P2;https://patents.google.com/patent/USPP31599P2;Robert Dale Hartman;Gingerland (не запатентован) × Candidum (не запатентован);23 - 30;30-36;Сердцевидная;Бело-розовый, зелёными основными прожилками с клюквенно-красными пятнами;Тень;Каладиум Splash of Wine – новинка 2019 года от генерального директора Classic, доктора Роберта Хартмана.;"Splash of Wine – это каладиум с декоративными листьями, бело-розовым фоном и зелёными основными прожилками с клюквенно-красными пятнами. Подходит для тенистых мест. Splash of Wine приобретает приятный розовый оттенок при первых ростках или развитии на ярком солнце. Сравнительно невысокое, компактное и куртинистое растение;";./img/Splash Of Wine.jpg;1
+230;Splash Of Wine;Heart to Heart;2011;USPP31599P2;https://patents.google.com/patent/USPP31599P2;Robert Dale Hartman;Gingerland (не запатентован) × Candidum (не запатентован);23 - 30;30-36;Сердцевидная;Бело-розовый, зелёными основными прожилками с клюквенно-красными пятнами;Тень;Каладиум Splash of Wine – новинка 2019 года от генерального директора Classic, доктора Роберта Хартмана;Splash of Wine – это каладиум с декоративными листьями, бело-розовым фоном и зелёными основными прожилками с клюквенно-красными пятнами. Подходит для тенистых мест. Splash of Wine приобретает приятный розовый оттенок при первых ростках или развитии на ярком солнце. Сравнительно невысокое, компактное и куртинистое растение;./img/Splash Of Wine.jpg;1
 231;Spring Fling;;;;;;;;;;;;;;./img/Spring Fling.jpg;1
 232;Starburst;Classic Caladiums;2009;PP20091;https://patents.justia.com/patent/PP20091;Robert Dale Hartman;Не указаны;40-60;12-20;Ремневидная;Красно-пурпурный с зелёными краями;Средняя;Звёздчатый рисунок;Яркие акценты;./img/Starburst.jpg;1
 233;Starburst Fancy;;;;;;;45-50;16-18;Сердцевидная;Красно-белый крап;Полутень;Декоративный;Для контейнеров;./img/Starburst Fancy.jpg;1
@@ -798,7 +798,12 @@
 307;White Pearl;Classic Caladiums;;;;;;50-55;18-20;Сердцевидная;Белый;Полутень;Жемчужный;Элитный;./img/White Pearl.jpg;1
 308;White Queen;;;;;;;;;;;;;;./img/White Queen.jpg;1
 309;White Silk;;;;;;;50-55;18-20;Сердцевидная;Шелковисто-белый;Тень;Бархатистая поверхность;Элитный;./img/White Silk.jpg;1
-310;White Star;Heart to Heart;2010;PP21148;https
+310;White Star;Heart to Heart;2010;PP21148;https://patents.justia.com/patent/PP21148;Robert Dale Hartman;Не указаны;60-80;20-30;Ремневидная;Бело-серый с розовыми прожилками;Средняя;Звёздчатый рисунок;Нежные переливы;./img/White Star.jpg;1
+311;White Swan;;;;;;;50-55;18-20;Сердцевидная;Белый;Полутень;Изящные листья;Для водоемов;./img/White Swan.jpg;1
+312;White Wings;;;;;;;50-55;18-20;Сердцевидная;Белый;Тень;Ажурные края листьев;Декоративный;./img/White Wings.jpg;1
+313;White Wonder;Heart to Heart;2010;PP21044;https://patents.justia.com/patent/PP21044;Robert Dale Hartman;Не указаны;50-70;15-25;Ремневидная;Бело-серый с тёмно-зелёными краями;Средняя;Популярный белый сорт;Нежные прожилки;./img/White Wonder.jpg;1
+314;Wildfire;;;;;;;;;;;;;;./img/Wildfire.jpg;1
+315;Xplosion;Heart to Heart;;;;;;;;;;;;;./img/Xplosion.jpg;1
 `;
 
         const caladiums = parseCSV(csvData);
