--- a/index.html
+++ b/index.html
@@ -734,14 +734,14 @@
         <div class="care-programs">
             <h3 class="font-semibold mb-4 text-lg text-gray-800 border-b pb-2">Программы ухода</h3>
             
-            <a href="https://github.com/MkaGeo/caladium/leaf_size.html" target="_blank" class="program-card">
+            <a href="https://mkageo.github.io/caladium/leaf_size.html" target="_blank" class="program-card">
                 <div class="program-icon">
                     <i class="fas fa-leaf"></i>
                 </div>
                 <div class="program-title">Увеличение размера листьев</div>
             </a>
             
-            <a href="https://github.com/MkaGeo/caladium/size_tuber.html" target="_blank" class="program-card">
+            <a href="https://mkageo.github.io/caladium/size_tuber.html" target="_blank" class="program-card">
                 <div class="program-icon">
                     <i class="fas fa-seedling"></i>
                 </div>
