--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
 				        </div>
 				        <div class="desktop-menu-dropdown">
 				            <div class="desktop-menu-header">Ресурсы</div>
-				            <a href="https://teletype.in/@geobyf/Uhod-za-kaladiumom" target="_blank" class="resource-card">
+				            <a href="https://mkageo.github.io/caladium/uhod-za-calad.html" target="_blank" class="resource-card">
                                 <div class="resource-icon bg-green-100">
                                     <i class="fas fa-seedling text-green-600"></i>
                                 </div>
@@ -820,7 +820,7 @@
         <div class="mt-4">
             <h3 class="font-semibold mb-4 text-lg text-gray-800 border-b pb-2">Ресурсы</h3>
             
-            <a href="https://teletype.in/@geobyf/Uhod-za-kaladiumom" target="_blank" class="resource-card">
+            <a href="https://mkageo.github.io/caladium/uhod-za-calad.html" target="_blank" class="resource-card">
                 <div class="resource-icon bg-green-100">
                     <i class="fas fa-seedling text-green-600"></i>
                 </div>
