--- a/uhod-za-calad.html
+++ b/uhod-za-calad.html
@@ -283,12 +283,13 @@
             border-radius: 0 4px 4px 0;
         }
         
-        .columns {
+		.columns {
             display: flex;
-            gap: 2rem;
-            margin: 1.5rem 0;
+            flex-direction: column;
+            gap: 1.5rem;
+            margin: 1.2rem 0;
         }
-        
+		
         .column {
             flex: 1;
             background: var(--light-bg);
