--- a/index.html
+++ b/index.html
@@ -1392,6 +1392,7 @@
                         <div class="feature-item"><strong>Селекционная линия:</strong> ${item['Селекционная линия'] || 'Не указана'}</div>
                         <div class="feature-item"><strong>Год:</strong> ${item['Год'] || 'Не указан'}</div>
                         <div class="feature-item"><strong>Селекционер:</strong> ${item['Селекционер'] || 'Не указан'}</div>
+						<div class="feature-item"><strong>Родители:</strong> ${item['Родители'] || 'Не указан'}</div>
                         ${item['Патент'] ? `<div class="feature-item"><strong>Патент:</strong> <a href="${item['Ссылка на патент']}" target="_blank" class="text-blue-600 hover:underline">${item['Патент']}</a></div>` : ''}
                         <div class="feature-item"><strong>Высота:</strong> ${item['Высота (см)']} см</div>
                         <div class="feature-item"><strong>Ширина листа:</strong> ${item['Ширина листа (см)']} см</div>
@@ -1470,6 +1471,7 @@
                     <div class="feature-item"><strong>Селекционная линия:</strong> ${item['Селекционная линия'] || 'Не указана'}</div>
                     <div class="feature-item"><strong>Год:</strong> ${item['Год'] || 'Не указан'}</div>
                     <div class="feature-item"><strong>Селекционер:</strong> ${item['Селекционер'] || 'Не указан'}</div>
+					<div class="feature-item"><strong>Родители:</strong> ${item['Родители'] || 'Не указан'}</div>
                     ${item['Патент'] ? `<div class="feature-item"><strong>Патент:</strong> <a href="${item['Ссылка на патент']}" target="_blank" class="text-blue-600 hover:underline">${item['Патент']}</a></div>` : ''}
                     <div class="feature-item"><strong>Высота:</strong> ${item['Высота (см)']} см</div>
                     <div class="feature-item"><strong>Ширина листа:</strong> ${item['Ширина листа (см)']} см</div>
